removed database